--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,32 @@ body {
   margin: 0 auto;
 }
 
+.languageBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .languageButton {
   background-color: #222222;
+  border-radius: 0 0 5px 5px;
   color: white;
+  width: 30%;
+  padding: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .euaIcon {
   width: 15px;
+  margin-left: 10px;
+}
+
+.brIcon {
+  width: 15px;
+  margin-left: 10px;
 }
 
 .profile {
