--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
 }
 
 .languageButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   border-radius: 0 0 5px 5px;
   color: white;
@@ -26,20 +29,18 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
+  font-size: 15px;
+  transition: 100ms ease-in-out;
 }
 
 .languageButton:hover {
   box-shadow: 0 0 5px black;
 }
 
-.euaIcon {
-  width: 15px;
+.languageIcon {
+  width: 20px;
   margin-left: 10px;
-}
-
-.brIcon {
-  width: 15px;
-  margin-left: 10px;
+  border-radius: 100%;
 }
 
 .profile {
@@ -104,6 +105,7 @@ ul {
 .social-icons {
   width: 20px;
   border-radius: 25%;
+  transition: 100ms ease-in-out;
 }
 
 .social-icons:hover {
