--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,14 @@ body {
 }
 
 .container {
-  width: 900px;
+  width: 60vw;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 800px) {
+  .container {
+    width: 90vw;
+  }
 }
 
 .languageBox {
@@ -18,12 +24,13 @@ body {
 
 .languageButton {
   display: flex;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   background-color: black;
   border-radius: 0 0 5px 5px;
   color: white;
-  width: 30%;
+  width: 250px;
   padding: 10px;
   text-align: center;
   text-transform: uppercase;
